<resources>
    <string name="app_name">MeetMe</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="enter_mobile_mumber">Enter Mobile Mumber</string>
    <string name="send_otp">SEND OTP</string>
    <string name="mobile">Mobile</string>
    <string name="otp">OTP</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="user_name">User Name</string>
    <string name="_880_1789_896378">+880 1789 896378</string>
    <string name="write_message_here">Write message here</string>
    <string name="todo">TODO</string>
    <string name="search_user">Search User</string>
</resources>