<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginOtp"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <RelativeLayout
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@drawable/circular_bg"
            android:backgroundTint="@color/my_primary"
            android:layout_margin="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/_1"
                android:textColor="@color/white"
                android:textSize="18sp"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@drawable/circular_bg"
            android:backgroundTint="@color/my_secondary"
            android:layout_margin="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/_2"
                android:textColor="@color/white"
                android:textSize="18sp"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@drawable/circular_bg"
            android:backgroundTint="@color/my_primary"
            android:layout_margin="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/_3"
                android:textColor="@color/white"
                android:textSize="18sp"/>
        </RelativeLayout>
    </LinearLayout>
    <ImageView
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:src="@drawable/otp"
        app:tint="@color/my_secondary"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Enter OTP sent to your phone number"
        android:layout_gravity="center_vertical"
        android:letterSpacing="0.08"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="22sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:hint="OTP"
            android:inputType="number"
            android:maxLength="6"
            android:layout_margin="10dp"
            android:background="@drawable/edit_text_rounded_cornar"
            android:elevation="5dp"
            android:id="@+id/login_otp"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="NEXT"
            android:textColor="@color/white"
            android:background="@drawable/btn_rounded"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:id="@+id/login_next"/>

        <ProgressBar
            android:layout_width="32dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/login_progress_bar"
            />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Resend OTP in 30 Sec"
        android:id="@+id/resend_otp_text"/>






</LinearLayout>